<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/search_list"
        android:layout_width="408dp"
        android:layout_height="405dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/rectangle1836"
        android:text="@string/testing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_bar" />

    <TextView
        android:id="@+id/choose_your"
        android:layout_width="245dp"
        android:layout_height="21dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="28dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="2sp"
        android:text="@string/choose_your"
        android:textAppearance="@style/choose_your"
        android:translationY="-0.75sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="138dp"
        android:layout_height="44dp"
        android:elevation="200sp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="3sp"
        android:text="@string/user_name"
        android:textAppearance="@style/user_name"
        android:translationY="-1.29sp"
        app:layout_constraintBottom_toBottomOf="@+id/user_name"
        app:layout_constraintEnd_toEndOf="@+id/user_name"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="@+id/user_name"
        app:layout_constraintTop_toTopOf="@+id/user_name"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextSizeCheck,TextContrastCheck" />

    <View
        android:id="@+id/user_name"
        android:layout_width="179dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rectangle16"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_your"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="200sp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="3sp"
        android:text="@string/qr_code"
        android:textAppearance="@style/qr_code"
        android:translationY="-1.29sp"
        app:layout_constraintBottom_toBottomOf="@+id/qr_code"
        app:layout_constraintEnd_toEndOf="@+id/qr_code"
        app:layout_constraintStart_toStartOf="@+id/qr_code"
        app:layout_constraintTop_toTopOf="@+id/qr_code"
        tools:ignore="TextContrastCheck" />

    <View
        android:id="@+id/qr_code"
        android:layout_width="184dp"
        android:layout_height="54dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rectangle16"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.68"
        app:layout_constraintStart_toEndOf="@+id/user_name"
        app:layout_constraintTop_toBottomOf="@+id/choose_your"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="39dp"
        android:layout_height="31dp"
        android:elevation="200sp"
        app:layout_constraintBottom_toBottomOf="@+id/search_bar"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.979"
        app:layout_constraintStart_toStartOf="@+id/search_bar"
        app:layout_constraintTop_toTopOf="@+id/search_bar"
        app:layout_constraintVertical_bias="0.6"
        app:srcCompat="@drawable/search_icon" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="147dp"
        android:layout_height="38dp"
        android:layout_marginEnd="72dp"
        android:elevation="200sp"
        android:text="@string/searching"
        android:textAppearance="@style/qr_code"
        app:layout_constraintBottom_toBottomOf="@+id/search_bar"
        app:layout_constraintEnd_toEndOf="@+id/search_bar"
        app:layout_constraintTop_toTopOf="@+id/search_bar"
        app:layout_constraintVertical_bias="0.642" />

    <View
        android:id="@+id/search_bar"
        android:layout_width="391dp"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle_s"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qr_code"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>