<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomepageFragment"
    android:background="@drawable/gradient"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/score_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="0"
            android:textAlignment="textEnd"
            android:textColor="#191847"
            android:textSize="150sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_box" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:contentDescription="TODO"
            android:elevation="200dp"
            app:layout_constraintBottom_toBottomOf="@+id/ask_button"
            app:layout_constraintEnd_toEndOf="@+id/ask_button"
            app:layout_constraintHorizontal_bias="0.636"
            app:layout_constraintStart_toStartOf="@+id/ask_button"
            app:layout_constraintTop_toTopOf="@+id/ask_button"
            app:layout_constraintVertical_bias="0.571"
            app:srcCompat="@drawable/img_1" />

        <TextView
            android:id="@+id/pts_string"
            android:layout_width="101dp"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/pts"
            android:textAlignment="textStart"
            android:textColor="#191847"
            android:textSize="30sp"

            app:layout_constraintBottom_toTopOf="@+id/my_ranking_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/score_display"
            app:layout_constraintTop_toTopOf="@+id/score_display"
            app:layout_constraintVertical_bias="0.756" />

        <TextView
            android:id="@+id/my_ranking_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ranking: #0"
            android:textAlignment="viewEnd"
            android:textColor="#191847"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/score_display"
            app:layout_constraintVertical_bias="0.044" />

        <ImageView
            android:id="@+id/scan_photo"
            android:layout_width="50dp"
            android:layout_height="55dp"
            android:layout_marginStart="32dp"
            android:contentDescription="TODO"
            android:elevation="200dp"
            app:layout_constraintBottom_toBottomOf="@+id/scan_button"
            app:layout_constraintStart_toStartOf="@+id/scan_button"
            app:layout_constraintTop_toTopOf="@+id/scan_button"
            app:layout_constraintVertical_bias="0.548"
            app:srcCompat="@drawable/qrcode_image"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/scan_now"
            android:layout_width="123dp"
            android:layout_height="55dp"
            android:layout_marginEnd="16dp"
            android:elevation="200dp"
            android:gravity="center"
            android:lineSpacingExtra="-4sp"
            android:text="@string/scan_now"
            android:textAppearance="@style/scan_now"
            android:textSize="24sp"
            app:autoSizeTextType="none"
            app:layout_constraintBottom_toBottomOf="@+id/scan_button"
            app:layout_constraintEnd_toEndOf="@+id/scan_button"
            app:layout_constraintTop_toTopOf="@+id/scan_button"
            app:layout_constraintVertical_bias="0.548"
            tools:ignore="VisualLintOverlap,TextContrastCheck" />

        <View
            android:id="@+id/scan_button"
            android:layout_width="232dp"
            android:layout_height="86dp"
            android:background="@drawable/rectangle_1"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/my_ranking_number"
            app:layout_constraintVertical_bias="0.061"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/welcome_box"
            android:layout_width="352dp"
            android:layout_height="105dp"
            android:layout_marginTop="96dp"
            android:background="@drawable/rectangle_2"
            android:contentDescription="TODO"
            android:elevation="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcome_user"

            android:layout_width="283dp"
            android:layout_height="83dp"
            android:elevation="50dp"
            android:gravity="center"
            android:lineSpacingExtra="0sp"
            android:text="@string/welcome_use"
            android:textAppearance="@style/welcome_use"
            app:layout_constraintBottom_toBottomOf="@+id/welcome_box"
            app:layout_constraintEnd_toEndOf="@+id/welcome_box"
            app:layout_constraintHorizontal_bias="0.55"
            app:layout_constraintStart_toStartOf="@+id/welcome_box"
            app:layout_constraintTop_toTopOf="@+id/welcome_box"
            app:layout_constraintVertical_bias="0.454" />

        <ImageButton
            android:id="@+id/ask_button"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/ellipse_494"
            android:clickable="true"
            android:contentDescription="TODO"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>